[2017r2] Added navbar responsivity

--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html>
 <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="home.css">
     <script src="home.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -8,7 +9,7 @@
 </head>
 <body>
     <div class="nav" id="nav">
-
+        <img src="assets/wjtb.png" alt="WJTB">
         <div class="links">
             <a href="#home">Home</a>
             <a href="#stream">Stream</a>
