--- a/home.html
+++ b/home.html
@@ -3,8 +3,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="home.css">
-    <script src="home.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="home.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.3/js/bootstrap-select.min.js"></script>
 </head>
 <body>
@@ -13,7 +14,15 @@
         <div class="links">
             <a href="#home">Home</a>
             <a href="#stream">Stream</a>
-            <a href="#shows">Shows</a>
+            <div class="drop">
+                <div class="drop_div" id="dd_shows">Programs
+                    <i class="fa fa-caret-down"></i>
+                </div>
+                <div class="drop_links" id="dl_shows">
+                    <a href="#shows">Shows</a>
+                    <a href="#showstreams">Showstreams</a>
+                </div>
+            </div>
             <a href="#events">Events</a>
             <a href="#staff">Staff</a>
             <a href="#forms">Forms</a>
