--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="home.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.3/js/bootstrap-select.min.js"></script>
 </head>
@@ -14,18 +15,38 @@
         <div class="links">
             <a href="#home">Home</a>
             <a href="#stream">Stream</a>
-            <div class="drop">
-                <div class="drop_div" id="dd_shows">Programs
+            <a href="#" id="a_shows">Programs</a>
+            <a href="#events">Events</a>
+            <!--<div class="drop">
+                <div class="drop_div" id="dd_forms">Forms</a>
                     <i class="fa fa-caret-down"></i>
                 </div>
-                <div class="drop_links" id="dl_shows">
-                    <a href="#shows">Shows</a>
-                    <a href="#showstreams">Showstreams</a>
+                <div class="drop_links" id="dl_forms">
+                    <a href="#forms/show">Show Request</a>
+                    <a href="#forms/showstream">Showstream Request</a>
+                    <a href="#forms/livesound">Live Sound Request</a>
+                    <a href="#forms/adspace">Adspace Request</a>
                 </div>
             </div>
-            <a href="#events">Events</a>
-            <a href="#staff">Staff</a>
-            <a href="#forms">Forms</a>
+            <div class="drop">
+                <div class="drop_div" id="dd_about">About</a>
+                    <i class="fa fa-caret-down"></i>
+                </div>
+                <div class="drop_links" id="dl_about">
+                    <a href="#staff">Staff</a>
+                    <a href="#rules">Rules &#38; Regulations</a>
+                    <a href="#constitution">Constitution</a>
+                </div>
+            </div>-->
+        </div>
+    </div>
+    <div class="subnav" id="subnav">
+        <div class="navtab" id="nt_shows">
+            <span>Programs</span>
+            <div class="sublinks">
+                <a href="#shows">Shows</a>
+                <a href="#showstreams">Showstreams</a>
+            </div>
         </div>
     </div>
 </body>
