--- a/home.html
+++ b/home.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" type="text/css" href="home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="home.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.3/js/bootstrap-select.min.js"></script>
 </head>
@@ -15,7 +14,7 @@
         <div class="links">
             <a href="#home">Home</a>
             <a href="#stream">Stream</a>
-            <a href="#" id="a_shows">Programs</a>
+            <a href="javascript:void(0)" id="a_shows" onClick="navtab_id(this.id)">Programs</a>
             <a href="#events">Events</a>
             <!--<div class="drop">
                 <div class="drop_div" id="dd_forms">Forms</a>
