[2018r4] Finished navtab functionality

--- a/home.html
+++ b/home.html
@@ -16,27 +16,8 @@
             <a href="#stream">Stream</a>
             <a href="javascript:void(0)" id="a_shows" onClick="navtab_id(this.id)">Programs</a>
             <a href="#events">Events</a>
-            <!--<div class="drop">
-                <div class="drop_div" id="dd_forms">Forms</a>
-                    <i class="fa fa-caret-down"></i>
-                </div>
-                <div class="drop_links" id="dl_forms">
-                    <a href="#forms/show">Show Request</a>
-                    <a href="#forms/showstream">Showstream Request</a>
-                    <a href="#forms/livesound">Live Sound Request</a>
-                    <a href="#forms/adspace">Adspace Request</a>
-                </div>
-            </div>
-            <div class="drop">
-                <div class="drop_div" id="dd_about">About</a>
-                    <i class="fa fa-caret-down"></i>
-                </div>
-                <div class="drop_links" id="dl_about">
-                    <a href="#staff">Staff</a>
-                    <a href="#rules">Rules &#38; Regulations</a>
-                    <a href="#constitution">Constitution</a>
-                </div>
-            </div>-->
+            <a href="javascript:void(0)" id="a_forms" onClick="navtab_id(this.id)">Forms</a>
+            <a href="javascript:void(0)" id="a_about" onClick="navtab_id(this.id)">About</a>
         </div>
     </div>
     <div class="subnav" id="subnav">
@@ -45,6 +26,23 @@
             <div class="sublinks">
                 <a href="#shows">Shows</a>
                 <a href="#showstreams">Showstreams</a>
+            </div>
+        </div>
+        <div class="navtab" id="nt_forms">
+            <span>Forms</span>
+            <div class="sublinks">
+                <a href="#showform">Show Request</a>
+                <a href="#showstreamform">Showstream Request</a>
+                <a href="#livesound">Live Sound</a>
+                <a href="#adspace">Adspace</a>
+            </div>
+        </div>
+        <div class="navtab" id="nt_about">
+            <span>About</span>
+            <div class="sublinks">
+                <a href="#staff">Staff</a>
+                <a href="#rules">Rules &#38; Regulations</a>
+                <a href="#constitution">Constitution</a>
             </div>
         </div>
     </div>
