--- a/home.html
+++ b/home.html
@@ -46,5 +46,18 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <span id="f_left">
+            <img src="assets/aemx.png" alt="Built By AEMX">
+        </span>
+        <span id="f_center">
+            &#169; 2018 WJTB Radio. All Rights Reserved.
+        </span>
+        <span id="f_right">
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-instagram"></i>
+        </span>
+    </div>
 </body>
 </html>
