--- a/home.html
+++ b/home.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="nav" id="nav">
-        <img src="assets/wjtb.png" alt="WJTB">
+        <a href="#home">
+            <img src="assets/wjtb.png" alt="WJTB">
+        </a>
         <div class="links">
             <a href="#home">Home</a>
             <a href="#stream">Stream</a>
@@ -47,16 +49,16 @@
         </div>
     </div>
     <div class="footer">
-        <span id="f_left">
-            <img src="assets/aemx.png" alt="Built By AEMX">
-        </span>
+        <a href="https://github.com/aemx" id="f_left" target="_blank">
+            <img src="assets/aemx.png" alt="aemx">
+        </a>
         <span id="f_center">
-            &#169; 2018 WJTB Radio. All Rights Reserved.
+            &#169; 2018 NJIT Broadcasting Association
         </span>
         <span id="f_right">
-            <i class="fa fa-facebook"></i>
-            <i class="fa fa-twitter"></i>
-            <i class="fa fa-instagram"></i>
+            <a class="fa fa-facebook" href="https://www.facebook.com/NJITWJTBRADIO/" target="_blank"></a>
+            <a class="fa fa-twitter" href="https://twitter.com/wjtb" target="_blank"></a>
+            <a class="fa fa-instagram" href="https://www.instagram.com/wjtbradio/" target="_blank"></a>
         </span>
     </div>
 </body>
