[2018r12] Setup new folder structure

--- a/nav.html
+++ b/nav.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="home.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="home.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.3/js/bootstrap-select.min.js"></script>
 </head>
 <body>
     <div class="nav" id="nav">
         <a href="#home">
-            <img src="assets/wjtb.png" alt="WJTB">
+            <img src="img/wjtb.png" alt="WJTB">
         </a>
         <div class="links">
             <a href="#home">Home</a>
@@ -50,7 +44,7 @@
     </div>
     <div class="footer">
         <a href="https://github.com/aemx" id="f_left" target="_blank">
-            <img src="assets/aemx.png" alt="aemx">
+            <img src="img/aemx.png" alt="aemx">
         </a>
         <span id="f_center">
             &#169; 2018 NJIT Broadcasting Association
