[2018r13] Fixes to global HTML header and footer

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <script src="js/nav.js"></script>
     <script src="js/main.js"></script>
 </head>
-<body class="preload">
-    <div id="main">
-    </div>
+<body class="wrapper">
+    <div id="header"></div>
+    <div class="content"></div>
+    <div id="footer"></div>
 </body>
 </html>
