--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 <body class="wrapper">
     <div id="header"></div>
-    <div class="content"></div>
+    <div class="content">
+        <div class="tmp alert alert_danger">
+            <h1 class="alert_h">WEBSITE MAINTENANCE</h1>
+            Currently, WJTB is in the process of designing a <b>brand new website</b> for a streamline, user-friendly experience.
+            Expect major changes to the webpages and overall functionality of this website, effective <b>January 17, 2018</b>.
+            If you have any questions or concerns, please contact our Webmaster, <b>Spencer Gunning</b>, at <b><a href="mailto:swg5@njit.edu">swg5@njit.edu</a></b>.
+            <br>
+            <br>
+            <b>While maintenance continues, please note you are free to use the navigation bar to access other areas of our website<b/>.
+        </div>
+    </div>
     <div id="footer"></div>
 </body>
 </html>
