[2018r15] Completion of temporary stream page

--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,8 @@
 <body>
     <footer class="footer">
         <a href="https://github.com/aemx" id="f_left" target="_blank">
-            <img src="img/aemx.png" alt="aemx">
+            <img src="img/aemx.png" alt="" onerror="this.style.display='none'">
+            <img src="../img/aemx.png" alt="" onerror="this.style.display='none'">
         </a>
         <span id="f_center">&#169; 2018 NJIT Broadcasting Association</span>
         <span id="f_right">
