--- a/header.html
+++ b/header.html
@@ -3,7 +3,8 @@
 <body>
     <div class="nav" id="nav">
         <a href="#home">
-            <img src="img/wjtb.png" alt="WJTB">
+            <img src="img/wjtb.png" alt="" onerror="this.style.display='none'">
+            <img src="../img/wjtb.png" alt="" onerror="this.style.display='none'">
         </a>
         <div class="links">
             <a href="#home">Home</a>
