--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="header"></div>
     <div class="content">
         <div class="tmp alert alert_danger">
-            <h1 class="alert_h">WEBSITE MAINTENANCE</h1>
+            <h1 class="alert_h">Website Maintenance</h1>
             Currently, WJTB is in the process of designing a <b>brand new website</b> for a streamline, user-friendly experience.
             Expect major changes to the webpages and overall functionality of this website, effective <b>January 17, 2018</b>.
             If you have any questions or concerns, please contact our Webmaster, <b>Spencer Gunning</b>, at <b><a href="mailto:swg5@njit.edu">swg5@njit.edu</a></b>.
