[2018r17] Completion of constitution page

--- a/rules/index.html
+++ b/rules/index.html
@@ -13,7 +13,7 @@
     <div class="content">
         <h1 class="h1_alt">Rules and Regulations</h1>
         <p class="subtext">Updated 19 January 2018</p>
-        <hr>
+        <hr noshade>
         <h2 class="h2_alt">Broadcasting Privileges</h2>
         <p>
             In order to broadcast your program, you must attend one meeting per week, unless otherwise stated by the WJTB E-Board.
@@ -22,7 +22,7 @@
             <br><br>
             Failure to comply to the above rules will ultimately result in revocation of broadcasting privileges.
         </p>
-        <hr>
+        <hr noshade>
         <h2 class="h2_alt">On-air Language</h2>
         <p>
             While obscene, indecent and profane language during broadcasts is not strictly prohibited, we ask that you please attempt to limit your use of said language.
@@ -32,7 +32,7 @@
             <br><br>           
             All guests on WJTB programs must abide by the above rules. Broadcasters are responsible for all actions during their time on-air.
         </p>
-        <hr>
+        <hr noshade>
         <h2 class="h2_alt">Miscellaneous Protocols</h2>
         <p>
             If a piece of equipment breaks or is not working as intended, please contact our Station Manager, <b>Kenny Eisenhardt</b>, at <b><a href="mailto:kce6@njit.edu" class="black">kce6@njit.edu</a></b>.
