--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/nav.js"></script>
     <script src="js/main.js"></script>
+    <title>WJTB Radio</title>
 </head>
 <body class="wrapper">
     <div id="header"></div>
