--- a/staff/index.html
+++ b/staff/index.html
@@ -7,11 +7,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../js/nav.js"></script>
     <script src="../js/main.js"></script>
+    <title>Staff Information – WJTB Radio</title>
 </head>
 <body class="wrapper">
     <div id="header"></div>
     <div class="content">
-        <h1 class="h1_alt">Staff Contact Information</h1>
+        <h1 class="h1_alt">Staff Information</h1>
         <p class="subtext">Updated for Spring 2018</p>
         <hr noshade>
         <p>
