[2018r20] Various hotfixes for live staging test

--- a/header.html
+++ b/header.html
@@ -2,15 +2,14 @@
 <html>
 <body>
     <div class="nav" id="nav">
-        <a href="http://wjtb.njit.edu">
-            <img src="img/wjtb.png" alt="" onerror="this.style.display='none'">
-            <img src="../img/wjtb.png" alt="" onerror="this.style.display='none'">
+        <a href="/">
+            <img src="../img/wjtb.png" alt="">
         </a>
         <div class="links">
-            <a href="http://wjtb.njit.edu">Home</a>
-            <a href="http://wjtb.njit.edu/stream">Stream</a>
+            <a href="/">Home</a>
+            <a href="/stream">Stream</a>
             <a href="javascript:void(0)" id="a_shows" onClick="navtab_id(this.id)">Programs</a>
-            <a href="http://wjtb.njit.edu/events">Events</a>
+            <a href="/events">Events</a>
             <a href="javascript:void(0)" id="a_forms" onClick="navtab_id(this.id)">Forms</a>
             <a href="javascript:void(0)" id="a_about" onClick="navtab_id(this.id)">About</a>
         </div>
@@ -19,25 +18,25 @@
         <div class="navtab" id="nt_shows">
             <span>Programs</span>
             <div class="sublinks">
-                <a href="http://wjtb.njit.edu/shows">Shows</a>
-                <a href="http://wjtb.njit.edu/showstreams">Showstreams</a>
+                <a href="/shows">Shows</a>
+                <a href="/showstreams">Showstreams</a>
             </div>
         </div>
         <div class="navtab" id="nt_forms">
             <span>Forms</span>
             <div class="sublinks">
-                <a href="http://wjtb.njit.edu/showform">Show Request</a>
-                <a href="http://wjtb.njit.edu/showstreamform">Showstream Request</a>
-                <a href="http://wjtb.njit.edu/livesound">Live Sound</a>
-                <a href="http://wjtb.njit.edu/adspace">Adspace</a>
+                <a href="/showform">Show Request</a>
+                <a href="/showstreamform">Showstream Request</a>
+                <a href="/livesound">Live Sound</a>
+                <a href="/adspace">Adspace</a>
             </div>
         </div>
         <div class="navtab" id="nt_about">
             <span>About</span>
             <div class="sublinks">
-                <a href="http://wjtb.njit.edu/staff">Staff</a>
-                <a href="http://wjtb.njit.edu/rules">Rules &#38; Regulations</a>
-                <a href="http://wjtb.njit.edu/constitution">Constitution</a>
+                <a href="/staff">Staff</a>
+                <a href="/rules">Rules &#38; Regulations</a>
+                <a href="/constitution">Constitution</a>
             </div>
         </div>
     </div>
