--- a/rules/index.html
+++ b/rules/index.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../js/nav.js"></script>
     <script src="../js/main.js"></script>
-    <title>Rules and Regulations – WJTB Radio</title>
+    <title>Rules and Regulations &#8211; WJTB Radio</title>
 </head>
 <body class="wrapper">
     <div id="header"></div>
