[2018r21] "404" staging with temporary info

--- a/404/index.html
+++ b/404/index.html
@@ -12,15 +12,55 @@
 <body class="wrapper">
     <div id="header"></div>
     <div class="content">
-        <h1 class="h1_alt">404 Page Not Found</h1>
-        <hr noshade>
-        <p>
-            Sorry, we were unable to find the page you asked for.
+        <div class="alert alert_danger">
+            <h1 class="alert_h">Website Maintenance</h1>
+            Currently, WJTB is in the process of designing a <b>brand new website</b> for a streamline, user-friendly experience.
+            Expect major changes to the webpages and overall functionality of this website, effective now <b>until further notice</b>.
+            If you have any questions or concerns, please contact our Webmaster, <b>Spencer Gunning</b>, at <b><a href="mailto:swg5@njit.edu">swg5@njit.edu</a></b>.
+            <br>
+            <br>
+            <b>While maintenance continues, please check below for our stream, contact information, and registration forms<b/>.
+        </div>
+        <div>
+            <h2 class=".h2-alt">Stream</h2>
+            <audio controls>
+                <source src="http://stream.njit.edu:8000/stream1.mp3">
+            </audio>
             <br><br>
-            WJTB is in the process of designing a <b>brand new website</b>, so please be aware the page you might be looking for may not be ready for public consumption.
+            <h2 class=".h2-alt">Show Registration</h2>
+            <a href="https://docs.google.com/forms/d/1vU6znOiLScupCc44hq-arzkX07IB9SbGNeYfBqpw6-0" class="black">https://docs.google.com/forms/d/1vU6znOiLScupCc44hq-arzkX07IB9SbGNeYfBqpw6-0</a>
+            <br>
+            <h2 class=".h2-alt">Live Event Registration</h2>
+            <a href="https://docs.google.com/forms/d/1DtlNZxMAQ_z3C_kBU5UjFmgqaPGst1AC_BIXDofzctU" class="black">https://docs.google.com/forms/d/1DtlNZxMAQ_z3C_kBU5UjFmgqaPGst1AC_BIXDofzctU</a>
             <br><br>
-            If you have any questions about the new website, or have concerns about why you have been redirected to this page, please contact our Webmaster, <b>Spencer Gunning</b>, at <b><a href="mailto:swg5@njit.edu" class="black">swg5@njit.edu</a></b>.
-        </p>
+            <h2 class=".h2-alt">Contact Information</h2>
+            <p>
+                <b>Sean Regan, General Manager: </b><a href="mailto:sjr38@njit.edu" class="black">sjr38@njit.edu</a>
+                <br><br>
+                <b>Kenny Eisenhardt, Station Manager: </b><a href="mailto:kce6@njit.edu" class="black">kce6@njit.edu</a>
+                <br><br>
+                <b>Tyler Hamilton, Business Manager: </b><a href="mailto:tlh22@njit.edu" class="black">tlh22@njit.edu</a>
+                <br><br>
+                <b>Nick Warholak, Program Manager: </b><a href="mailto:njw8@njit.edu" class="black">njw8@njit.edu</a>
+                <br><br>
+                <b>Dan Landers, Live Events Manager: </b><a href="mailto:djl46@njit.edu" class="black">djl46@njit.edu</a>
+                <br><br>
+                <b>Christopher Ho, Content Manager: </b><a href="mailto:ch254@njit.edu" class="black">ch254@njit.edu</a>
+                <br><br>
+                <b>Connor Norris, Public Relations Manager: </b><a href="mailto:cjn7@njit.edu" class="black">cjn7@njit.edu</a>
+                <br><br>
+                <b>Spencer Gunning, Webmaster: </b><a href="mailto:swg5@njit.edu" class="black">swg5@njit.edu</a>
+                <br><br>
+                <b>Miscellaneous Inquiries: </b><a href="mailto:wjtbradio@gmail.com" class="black">wjtbradio@gmail.com</a>
+            </p>
+            <hr noshade>
+            <br>
+            <p>
+                Looking for something else?
+                Please contact our Webmaster, <b>Spencer Gunning</b>, at <b><a href="mailto:swg5@njit.edu" class="black">swg5@njit.edu</a></b> for more information.
+            </p>
+            <br><br><br><br><br>
+        </div>
     </div>
     <div id="footer"></div>
 </body>
