[2018r22] Stream, schedule, office hours update

--- a/404/index.html
+++ b/404/index.html
@@ -21,37 +21,94 @@
             <br>
             <b>While maintenance continues, please check below for our stream, contact information, and registration forms<b/>.
         </div>
-        <div>
-            <h2 class=".h2-alt">Stream</h2>
+        <h2 class=".h2-alt">Stream</h2>
+        <div style="display: inline-block;">
+            <audio controls>
+                <source src="http://stream.njit.edu:8000/stream1.aac">
+            </audio>
+            <br>
+            AAC Stream (Primary)
+        </div>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div style="display: inline-block;">
             <audio controls>
                 <source src="http://stream.njit.edu:8000/stream1.mp3">
             </audio>
+            <br>
+            MP3 Stream (Secondary)
+        </div>
+        <br><br>
+        <div>
+            <h2 class=".h2-alt">Show Schedule</h2>
+            <p class="subtext">
+                Approved shows have submitted a Show Registration Form,
+                have submitted a poster to ><a href="mailto:swg5@njit.edu" class="black">swg5@njit.edu</a> or <a href="mailto:wjtbradio@gmail.com" class="black">wjtbradio@gmail.com</a>,
+                and the host(s) of the show have participated in an Introductory Workshop during office hours or during a meeting.
+            </p>
+            <div class="poster">
+                <img src="https://i.imgur.com/vYvB9od.jpg">
+                <p>Friday; 2:00PM - 2:55PM</p>
+            </div>
+            <div class="poster">
+                <img src="https://i.imgur.com/GFWCW9a.jpg">
+                <p>Friday; 3:00PM - 3:55PM</p>
+            </div>
+        </div>
+        <div>
             <br><br>
             <h2 class=".h2-alt">Show Registration</h2>
-            <a href="https://docs.google.com/forms/d/1vU6znOiLScupCc44hq-arzkX07IB9SbGNeYfBqpw6-0" class="black">https://docs.google.com/forms/d/1vU6znOiLScupCc44hq-arzkX07IB9SbGNeYfBqpw6-0</a>
-            <br><br>
-            <h2 class=".h2-alt">Live Event Registration</h2>
-            <a href="https://docs.google.com/forms/d/1DtlNZxMAQ_z3C_kBU5UjFmgqaPGst1AC_BIXDofzctU" class="black">https://docs.google.com/forms/d/1DtlNZxMAQ_z3C_kBU5UjFmgqaPGst1AC_BIXDofzctU</a>
-            <br><br>
-            <h2 class=".h2-alt">Contact Information</h2>
             <p>
-                <b>Sean Regan, General Manager: </b><a href="mailto:sjr38@njit.edu" class="black">sjr38@njit.edu</a>
-                <br><br>
-                <b>Kenny Eisenhardt, Station Manager: </b><a href="mailto:kce6@njit.edu" class="black">kce6@njit.edu</a>
-                <br><br>
-                <b>Tyler Hamilton, Business Manager: </b><a href="mailto:tlh22@njit.edu" class="black">tlh22@njit.edu</a>
-                <br><br>
-                <b>Nick Warholak, Program Manager: </b><a href="mailto:njw8@njit.edu" class="black">njw8@njit.edu</a>
-                <br><br>
-                <b>Dan Landers, Live Events Manager: </b><a href="mailto:djl46@njit.edu" class="black">djl46@njit.edu</a>
-                <br><br>
-                <b>Christopher Ho, Content Manager: </b><a href="mailto:ch254@njit.edu" class="black">ch254@njit.edu</a>
-                <br><br>
-                <b>Connor Norris, Public Relations Manager: </b><a href="mailto:cjn7@njit.edu" class="black">cjn7@njit.edu</a>
-                <br><br>
-                <b>Spencer Gunning, Webmaster: </b><a href="mailto:swg5@njit.edu" class="black">swg5@njit.edu</a>
-                <br><br>
-                <b>Miscellaneous Inquiries: </b><a href="mailto:wjtbradio@gmail.com" class="black">wjtbradio@gmail.com</a>
+                <a href="https://docs.google.com/forms/d/1vU6znOiLScupCc44hq-arzkX07IB9SbGNeYfBqpw6-0" class="black">https://docs.google.com/forms/d/1vU6znOiLScupCc44hq-arzkX07IB9SbGNeYfBqpw6-0</a>
+            </p>
+            <br>
+            <h2 class=".h2-alt">Live Event Registration</h2>
+            <p>
+                <a href="https://docs.google.com/forms/d/1DtlNZxMAQ_z3C_kBU5UjFmgqaPGst1AC_BIXDofzctU" class="black">https://docs.google.com/forms/d/1DtlNZxMAQ_z3C_kBU5UjFmgqaPGst1AC_BIXDofzctU</a>
+            </p>
+            <br>
+            <h2 class=".h2-alt">Contact Information</h2>
+            <b>Sean Regan, General Manager: </b><a href="mailto:sjr38@njit.edu" class="black">sjr38@njit.edu</a>
+            <p>
+                Office Hours: Tuesday, Friday; 2:30PM - 3:30PM
+            </p>
+            <br>
+            <b>Kenny Eisenhardt, Station Manager: </b><a href="mailto:kce6@njit.edu" class="black">kce6@njit.edu</a>
+            <p>
+                Office Hours: Monday; 6:00PM - 8:00PM
+            </p>
+            <br>
+            <b>Tyler Hamilton, Business Manager: </b><a href="mailto:tlh22@njit.edu" class="black">tlh22@njit.edu</a>
+            <p>
+                Office Hours: TBA
+            </p>
+            <br>
+            <b>Nick Warholak, Program Manager: </b><a href="mailto:njw8@njit.edu" class="black">njw8@njit.edu</a>
+            <p>
+                Office Hours: Wednesday; 6:00PM - 8:00PM
+            </p>
+            <br>
+            <b>Dan Landers, Live Events Manager: </b><a href="mailto:djl46@njit.edu" class="black">djl46@njit.edu</a>
+            <p>
+                Office Hours: Wednesday; 3:00PM - 5:00PM
+            </p>
+            <br>
+            <b>Christopher Ho, Content Manager: </b><a href="mailto:ch254@njit.edu" class="black">ch254@njit.edu</a>
+            <p>
+                Office Hours: Monday; 3:00PM - 5:00PM
+            </p>
+            <br>
+            <b>Connor Norris, Public Relations Manager: </b><a href="mailto:cjn7@njit.edu" class="black">cjn7@njit.edu</a>
+            <p>
+                Office Hours: Thursday; 3:00PM - 5:00PM
+            </p>
+            <br>
+            <b>Spencer Gunning, Webmaster: </b><a href="mailto:swg5@njit.edu" class="black">swg5@njit.edu</a>
+            <p>
+                Office Hours: Tuesday; 3:30PM - 5:30PM
+            </p>
+            <br>
+            <b>Miscellaneous Inquiries: </b><a href="mailto:wjtbradio@gmail.com" class="black">wjtbradio@gmail.com</a>
             </p>
             <hr noshade>
             <br>
@@ -59,7 +116,7 @@
                 Looking for something else?
                 Please contact our Webmaster, <b>Spencer Gunning</b>, at <b><a href="mailto:swg5@njit.edu" class="black">swg5@njit.edu</a></b> for more information.
             </p>
-            <br><br><br><br><br>
+            <br><br><br>
         </div>
     </div>
     <div id="footer"></div>
