--- a/404/index.html
+++ b/404/index.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../js/nav.js"></script>
     <script src="../js/main.js"></script>
-    <title>404 Page Not Found &#8211; WJTB Radio</title>
+    <title>WJTB Radio</title>
 </head>
 <body class="wrapper">
     <div id="header"></div>
@@ -22,7 +22,7 @@
             <b>While maintenance continues, please check below for our stream, contact information, and registration forms<b/>.
         </div>
         <h2 class=".h2-alt">Stream</h2>
-        <div style="display: inline-block;">
+        <div style="display: inline-block; text-align: center;">
             <audio controls>
                 <source src="http://stream.njit.edu:8000/stream1.aac">
             </audio>
@@ -31,7 +31,7 @@
         </div>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <div style="display: inline-block;">
+        <div style="display: inline-block; text-align: center;">
             <audio controls>
                 <source src="http://stream.njit.edu:8000/stream1.mp3">
             </audio>
@@ -43,15 +43,22 @@
             <h2 class=".h2-alt">Show Schedule</h2>
             <p class="subtext">
                 Approved shows have submitted a Show Registration Form,
-                have submitted a poster to ><a href="mailto:swg5@njit.edu" class="black">swg5@njit.edu</a> or <a href="mailto:wjtbradio@gmail.com" class="black">wjtbradio@gmail.com</a>,
+                have submitted a poster to <a href="mailto:swg5@njit.edu" class="black">swg5@njit.edu</a> or <a href="mailto:wjtbradio@gmail.com" class="black">wjtbradio@gmail.com</a>,
                 and the host(s) of the show have participated in an Introductory Workshop during office hours or during a meeting.
             </p>
             <div class="poster">
+                <img src="https://i.imgur.com/zwIYjmS.jpg">
+                <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">Words with Nerds</p>
+                <p>Wednesday; 7:00PM - 7:55PM</p>
+            </div>
+            <div class="poster">
                 <img src="https://i.imgur.com/vYvB9od.jpg">
+                <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">The CERiNG Show</p>
                 <p>Friday; 2:00PM - 2:55PM</p>
             </div>
             <div class="poster">
-                <img src="https://i.imgur.com/GFWCW9a.jpg">
+                <img src="https://i.imgur.com/KcDc3vs.png">
+                <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">Electric Thundergun Evolved</p>
                 <p>Friday; 3:00PM - 3:55PM</p>
             </div>
         </div>
