--- a/404/index.html
+++ b/404/index.html
@@ -47,19 +47,29 @@
                 and the host(s) of the show have participated in an Introductory Workshop during office hours or during a meeting.
             </p>
             <div class="poster">
-                <img src="https://i.imgur.com/zwIYjmS.jpg">
+                <img src="https://i.imgur.com/7BZ9A95.png">
+                <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">Adem Radio</p>
+                <p>Monday; 9:00PM - 10:55PM</p>
+            </div>
+            <div class="poster">
+                <img src="https://i.imgur.com/zwIYjmS.png">
                 <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">Words with Nerds</p>
                 <p>Wednesday; 7:00PM - 7:55PM</p>
             </div>
             <div class="poster">
-                <img src="https://i.imgur.com/vYvB9od.jpg">
+                <img src="https://i.imgur.com/OofbKaP.png">
+                <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">Cantankerous Kitchen</p>
+                <p>Thursday; 1:30PM - 2:25PM</p>
+            </div>
+            <div class="poster">
+                <img src="https://i.imgur.com/vYvB9od.png">
                 <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">The CERiNG Show</p>
-                <p>Friday; 2:00PM - 2:55PM</p>
+                <p>Friday; 3:00PM - 3:55PM</p>
             </div>
             <div class="poster">
                 <img src="https://i.imgur.com/KcDc3vs.png">
                 <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">Electric Thundergun Evolved</p>
-                <p>Friday; 3:00PM - 3:55PM</p>
+                <p>Friday; 4:00PM - 4:55PM</p>
             </div>
         </div>
         <div>
