--- a/404/index.html
+++ b/404/index.html
@@ -52,6 +52,11 @@
                 <p>Monday; 9:00PM - 10:55PM</p>
             </div>
             <div class="poster">
+                <img src="https://i.imgur.com/pZWhmtK.png">
+                <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">The Lonely Island Power Hour</p>
+                <p>Tuesday; 8:00PM - 8:55PM</p>
+            </div>
+            <div class="poster">
                 <img src="https://i.imgur.com/zwIYjmS.png">
                 <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">Words with Nerds</p>
                 <p>Wednesday; 7:00PM - 7:55PM</p>
@@ -61,6 +66,7 @@
                 <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">Cantankerous Kitchen</p>
                 <p>Thursday; 1:30PM - 2:25PM</p>
             </div>
+            <br><br><br>
             <div class="poster">
                 <img src="https://i.imgur.com/vYvB9od.png">
                 <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">The CERiNG Show</p>
