[2018r23] Add posters, fix URL preview

--- a/404/index.html
+++ b/404/index.html
@@ -12,6 +12,7 @@
 <body class="wrapper">
     <div id="header"></div>
     <div class="content">
+        <img class="logo" src="../img/wjtb.png">
         <div class="alert alert_danger">
             <h1 class="alert_h">Website Maintenance</h1>
             Currently, WJTB is in the process of designing a <b>brand new website</b> for a streamline, user-friendly experience.
@@ -57,16 +58,21 @@
                 <p>Tuesday; 8:00PM - 8:55PM</p>
             </div>
             <div class="poster">
+                <img src="https://i.imgur.com/xyPLdVu.png">
+                <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">Dan's Irish Kitchen</p>
+                <p>Wednesday; 3:00PM - 3:55PM</p>
+            </div>
+            <div class="poster">
                 <img src="https://i.imgur.com/zwIYjmS.png">
                 <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">Words with Nerds</p>
                 <p>Wednesday; 7:00PM - 7:55PM</p>
             </div>
+            <br><br><br>
             <div class="poster">
                 <img src="https://i.imgur.com/OofbKaP.png">
                 <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">Cantankerous Kitchen</p>
                 <p>Thursday; 1:30PM - 2:25PM</p>
             </div>
-            <br><br><br>
             <div class="poster">
                 <img src="https://i.imgur.com/vYvB9od.png">
                 <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">The CERiNG Show</p>
