[2018r24] Apache config fixes, added shows page

--- a/404/index.html
+++ b/404/index.html
@@ -7,146 +7,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../js/nav.js"></script>
     <script src="../js/main.js"></script>
-    <title>WJTB Radio</title>
+    <title>404 Page Not Found &#8211; WJTB Radio</title>
 </head>
 <body class="wrapper">
     <div id="header"></div>
     <div class="content">
-        <img class="logo" src="../img/wjtb.png">
-        <div class="alert alert_danger">
-            <h1 class="alert_h">Website Maintenance</h1>
-            Currently, WJTB is in the process of designing a <b>brand new website</b> for a streamline, user-friendly experience.
-            Expect major changes to the webpages and overall functionality of this website, effective now <b>until further notice</b>.
-            If you have any questions or concerns, please contact our Webmaster, <b>Spencer Gunning</b>, at <b><a href="mailto:swg5@njit.edu">swg5@njit.edu</a></b>.
-            <br>
-            <br>
-            <b>While maintenance continues, please check below for our stream, contact information, and registration forms<b/>.
-        </div>
-        <h2 class=".h2-alt">Stream</h2>
-        <div style="display: inline-block; text-align: center;">
-            <audio controls>
-                <source src="http://stream.njit.edu:8000/stream1.aac">
-            </audio>
-            <br>
-            AAC Stream (Primary)
-        </div>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <div style="display: inline-block; text-align: center;">
-            <audio controls>
-                <source src="http://stream.njit.edu:8000/stream1.mp3">
-            </audio>
-            <br>
-            MP3 Stream (Secondary)
-        </div>
-        <br><br>
-        <div>
-            <h2 class=".h2-alt">Show Schedule</h2>
-            <p class="subtext">
-                Approved shows have submitted a Show Registration Form,
-                have submitted a poster to <a href="mailto:swg5@njit.edu" class="black">swg5@njit.edu</a> or <a href="mailto:wjtbradio@gmail.com" class="black">wjtbradio@gmail.com</a>,
-                and the host(s) of the show have participated in an Introductory Workshop during office hours or during a meeting.
-            </p>
-            <div class="poster">
-                <img src="https://i.imgur.com/7BZ9A95.png">
-                <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">Adem Radio</p>
-                <p>Monday; 9:00PM - 10:55PM</p>
-            </div>
-            <div class="poster">
-                <img src="https://i.imgur.com/pZWhmtK.png">
-                <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">The Lonely Island Power Hour</p>
-                <p>Tuesday; 8:00PM - 8:55PM</p>
-            </div>
-            <div class="poster">
-                <img src="https://i.imgur.com/xyPLdVu.png">
-                <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">Dan's Irish Kitchen</p>
-                <p>Wednesday; 3:00PM - 3:55PM</p>
-            </div>
-            <div class="poster">
-                <img src="https://i.imgur.com/zwIYjmS.png">
-                <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">Words with Nerds</p>
-                <p>Wednesday; 7:00PM - 7:55PM</p>
-            </div>
-            <br><br><br>
-            <div class="poster">
-                <img src="https://i.imgur.com/OofbKaP.png">
-                <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">Cantankerous Kitchen</p>
-                <p>Thursday; 1:30PM - 2:25PM</p>
-            </div>
-            <div class="poster">
-                <img src="https://i.imgur.com/vYvB9od.png">
-                <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">The CERiNG Show</p>
-                <p>Friday; 3:00PM - 3:55PM</p>
-            </div>
-            <div class="poster">
-                <img src="https://i.imgur.com/KcDc3vs.png">
-                <p style="font-family: 'nexabold', Arial, sans-serif; font-size: 1.2vw;">Electric Thundergun Evolved</p>
-                <p>Friday; 4:00PM - 4:55PM</p>
-            </div>
-        </div>
-        <div>
+        <h1 class="h1_alt">404 Page Not Found</h1>
+        <hr noshade>
+        <p>
+            Sorry, we were unable to find the page you asked for.
             <br><br>
-            <h2 class=".h2-alt">Show Registration</h2>
-            <p>
-                <a href="https://docs.google.com/forms/d/1vU6znOiLScupCc44hq-arzkX07IB9SbGNeYfBqpw6-0" class="black">https://docs.google.com/forms/d/1vU6znOiLScupCc44hq-arzkX07IB9SbGNeYfBqpw6-0</a>
-            </p>
-            <br>
-            <h2 class=".h2-alt">Live Event Registration</h2>
-            <p>
-                <a href="https://docs.google.com/forms/d/1DtlNZxMAQ_z3C_kBU5UjFmgqaPGst1AC_BIXDofzctU" class="black">https://docs.google.com/forms/d/1DtlNZxMAQ_z3C_kBU5UjFmgqaPGst1AC_BIXDofzctU</a>
-            </p>
-            <br>
-            <h2 class=".h2-alt">Contact Information</h2>
-            <b>Sean Regan, General Manager: </b><a href="mailto:sjr38@njit.edu" class="black">sjr38@njit.edu</a>
-            <p>
-                Office Hours: Tuesday, Friday; 2:30PM - 3:30PM
-            </p>
-            <br>
-            <b>Kenny Eisenhardt, Station Manager: </b><a href="mailto:kce6@njit.edu" class="black">kce6@njit.edu</a>
-            <p>
-                Office Hours: Monday; 6:00PM - 8:00PM
-            </p>
-            <br>
-            <b>Tyler Hamilton, Business Manager: </b><a href="mailto:tlh22@njit.edu" class="black">tlh22@njit.edu</a>
-            <p>
-                Office Hours: TBA
-            </p>
-            <br>
-            <b>Nick Warholak, Program Manager: </b><a href="mailto:njw8@njit.edu" class="black">njw8@njit.edu</a>
-            <p>
-                Office Hours: Wednesday; 6:00PM - 8:00PM
-            </p>
-            <br>
-            <b>Dan Landers, Live Events Manager: </b><a href="mailto:djl46@njit.edu" class="black">djl46@njit.edu</a>
-            <p>
-                Office Hours: Wednesday; 3:00PM - 5:00PM
-            </p>
-            <br>
-            <b>Christopher Ho, Content Manager: </b><a href="mailto:ch254@njit.edu" class="black">ch254@njit.edu</a>
-            <p>
-                Office Hours: Monday; 3:00PM - 5:00PM
-            </p>
-            <br>
-            <b>Connor Norris, Public Relations Manager: </b><a href="mailto:cjn7@njit.edu" class="black">cjn7@njit.edu</a>
-            <p>
-                Office Hours: Thursday; 3:00PM - 5:00PM
-            </p>
-            <br>
-            <b>Spencer Gunning, Webmaster: </b><a href="mailto:swg5@njit.edu" class="black">swg5@njit.edu</a>
-            <p>
-                Office Hours: Tuesday; 3:30PM - 5:30PM
-            </p>
-            <br>
-            <b>Miscellaneous Inquiries: </b><a href="mailto:wjtbradio@gmail.com" class="black">wjtbradio@gmail.com</a>
-            </p>
-            <hr noshade>
-            <br>
-            <p>
-                Looking for something else?
-                Please contact our Webmaster, <b>Spencer Gunning</b>, at <b><a href="mailto:swg5@njit.edu" class="black">swg5@njit.edu</a></b> for more information.
-            </p>
-            <br><br><br>
-        </div>
+            WJTB is in the process of designing a <b>brand new website</b>, so please be aware the page you might be looking for may not be ready for public consumption.
+            <br><br>
+            If you have any questions about the new website, or have concerns about why you have been redirected to this page, please contact our Webmaster, <b>Spencer Gunning</b>, at <b><a href="mailto:swg5@njit.edu" class="black">swg5@njit.edu</a></b>.
+        </p>
     </div>
     <div id="footer"></div>
 </body>
