--- a/private/footer.html
+++ b/private/footer.html
@@ -3,7 +3,7 @@
 <body>
     <footer class="footer">
         <a href="https://github.com/aemx" id="f_left" target="_blank">
-            <img src="/afs/cad.njit.edu/u/w/j/wjtb/public_html/img/aemx.png" alt="">
+            <img src="../img/aemx.png" alt="">
         </a>
         <span id="f_center">&#169; 2018 NJIT Broadcasting Association</span>
         <span id="f_right">
