--- a/private/header.html
+++ b/private/header.html
@@ -3,7 +3,7 @@
 <body>
     <div class="nav" id="nav">
         <a href="/">
-            <img src="/afs/cad.njit.edu/u/w/j/wjtb/public_html/img/wjtb.png" alt="">
+            <img src="../img/wjtb.png" alt="">
         </a>
         <div class="links">
             <a href="/">Home</a>
