[2018r25] Schedule corrections, add forms

--- a/private/header.html
+++ b/private/header.html
@@ -25,9 +25,9 @@
         <div class="navtab" id="nt_forms">
             <span>Forms</span>
             <div class="sublinks">
-                <a href="/showform">Show Request</a>
+                <a href="https://docs.google.com/forms/d/1vU6znOiLScupCc44hq-arzkX07IB9SbGNeYfBqpw6-0">Show Request</a>
                 <a href="/showstreamform">Showstream Request</a>
-                <a href="/livesound">Live Sound</a>
+                <a href="https://docs.google.com/forms/d/1DtlNZxMAQ_z3C_kBU5UjFmgqaPGst1AC_BIXDofzctU">Live Sound</a>
                 <a href="/adspace">Adspace</a>
             </div>
         </div>
