--- a/shows/index.html
+++ b/shows/index.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../js/nav.js"></script>
     <script src="../js/main.js"></script>
-    <title>WJTB Radio</title>
+    <title>Show Catalog &#8211; WJTB Radio</title>
 </head>
 <body class="wrapper">
     <div id="header"></div>
@@ -202,8 +202,7 @@
                 </div>
                 <p class="subsubtext">from 4:00PM to 4:55PM</p>
                 <p class="pfix">
-                    The CERiNG Show is an hour-long program exploring the various sub-genres of electronic music, ranging from vaporwave and nu-disco to hardstyle and trip hop.
-                    Tune in for a taste of electronic music, and traffic and weather on the half-hour!
+                    I play whatever I want. It's usually some dank bass music. Tune in!
                 </p>
             </div>
         </div>
@@ -245,7 +244,7 @@
                 </div>
                 <p class="subsubtext">from 8:00PM to 8:55PM</p>
                 <p class="pfix">
-                    Some great jams for when you're feeling like you wanna die.
+                    Some great jams for when you're feeling like you wanna die!
                 </p>
             </div>
         </div>
