[2018r26] Show poster update

--- a/shows/index.html
+++ b/shows/index.html
@@ -18,7 +18,7 @@
         <h2 class="h2_alt">Monday</h2>
         <br>
         <div class="show">
-            <img src="../img/shows/no_show.png" alt="">
+            <img src="../img/shows/macattack.png" alt="">
             <div class="show_desc">
                 <div class="all_inline">
                     <h3 class="h3_alt">MacAttack!</h3>
@@ -222,7 +222,7 @@
         </div>
         <br>
         <div class="show">
-            <img src="../img/shows/no_show.png" alt="">
+            <img src="../img/shows/avbs.png" alt="">
             <div class="show_desc">
                 <div class="all_inline">
                     <h3 class="h3_alt">AirWrecka's Vitamin Bass Supplements</h3>
